# mirrox

./: .gitignore  .prettierignore  App.tsx  README.md  app.json  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  project.md  test.html
.github/workflows/: backend-ci-cd.yml
.husky/: pre-commit
app/: .env  .env.example  .eslintrc.js  .gitignore  App.tsx  app.json  declarations.d.ts  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
app/assets/: avatar-viewer.html
app/assets/animations/: M_Standing_Expressions_007.glb  (+16 more)
app/src/: constants.ts
backend/: .dockerignore  .env.example  .eslintrc.js  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  nutrition.db  package-lock.json  package.json  tsconfig.json
backend/config/: feedback.map.json  feedback.tips.json  nutrition.thresholds.json  portion.units.json
backend/data/: myfcd_clean.json
backend/scripts/: schema.sql  seed_nutrition.ts
backend/src/: app.ts  index.ts
docs/: AQICN_INTEGRATION.md  ARCHITECTURE.md  AUTHENTICATION.md  ENHANCED_HEALTH_METRICS.md  EXTENDED_ARCHITECTURE.md  FORMATTING.md  LOCALSTORAGE.md  README_AVATAR_SETUP.md  UV_SKIN_EFFECTS_IMPLEMENTATION.md  UV_TIMEZONE_IMPLEMENTATION.md
ml_service/: README.md  __init__.py  pyproject.toml
ml_service/data/curated/: _myfcd_batch.json  categories.map.json  myfcd_clean.json
ml_service/data/raw/: nutritionix-api-mapping.csv
ml_service/scripts/: build_nutrition_db.py  download_usda_data.py  fetch_myfcd_api.js  fetch_nutritionix.py  openfoodfacts_to_json.py  search_food.py  usda_to_json.py
(+335 files in other folders)
