[project]
name = "ml-service"
version = "0.1.0"
description = "Utilities for preparing and querying nutrition datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1,<3.0",
    "torch>=2.1,<3.0",
    "transformers>=4.38,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
